Minor update - Further progress in all classes and server communication. Builds a new game game on server, with new deck, dealth hands, and folding/betting and calling working for the first round. Up to 8 players

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,7 +58,7 @@
         <form>
             <h3>Join a Poker game...</h3>
             <div class="container" style="background-color:#00ff557a">
-                <input type="text" placeholder="Enter a Name" name="username" id="uname" required><br>
+                <input type="text" placeholder="Enter a Name" value="Tom" name="username" id="uname" required><br>
                 <button type="button" id="submit-login">Join</button>
             </div>
         </form>
