--- a/public/style.css
+++ b/public/style.css
@@ -45,8 +45,35 @@ tr:nth-child(even) {
     margin-bottom: 3px;
 }
 
+.flexNew {
+    display: flex;
+    width: 98vw;
+    margin-bottom: 3px;
+}
+
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    background-color: rgb(5, 75, 9);
+}
+
+.flex-container > div {
+    background-color: #f1f1f1;
+    width: 100px;
+    margin: 10px;
+    text-align: center;
+    line-height: 75px;
+    font-size: 30px;
+  }
+
 #flex1 {
-    height: 54vh;
+    height: 38vh;
+    min-height: 230px;
+    font-family: 'Comfortaa', serif;
+}
+
+#flex3 {
+    height: 58vh;
     min-height: 230px;
     font-family: 'Comfortaa', serif;
 }
@@ -88,8 +115,17 @@ tr:nth-child(even) {
     font-family: 'Marcellus SC', serif;
 }
 
-#chatroom {
-    width: 98%;
+#gameTable {
+    width: 96%;
+    margin-left: 1%;
+    margin-top: 1%;
+    height: 93%;
+    overflow-y: scroll;
+    background-color:rgb(158, 232, 245);
+}
+
+#pokerTable {
+    width: 96%;
     margin-left: 1%;
     margin-top: 1%;
     height: 93%;
